[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Master_Spawner.gd" type="Script" id=1]
[ext_resource path="res://Scripts/SpawnerMover.gd" type="Script" id=2]

[node name="Master_Spawner" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
rxMax = 600
ryMax = 150
hardMode = true

[node name="Spawners_Top" type="Node2D" parent="."]
position = Vector2( 8.20221, -88.1737 )

[node name="ST_1" type="Node2D" parent="Spawners_Top"]
position = Vector2( 100, 50 )
script = ExtResource( 2 )

[node name="ST_2" type="Node2D" parent="Spawners_Top"]
position = Vector2( 200, 50 )
script = ExtResource( 2 )

[node name="ST_3" type="Node2D" parent="Spawners_Top"]
position = Vector2( 300, 50 )
script = ExtResource( 2 )

[node name="ST_4" type="Node2D" parent="Spawners_Top"]
position = Vector2( 400, 50 )
script = ExtResource( 2 )

[node name="ST_5" type="Node2D" parent="Spawners_Top"]
position = Vector2( 500, 50 )
script = ExtResource( 2 )

[node name="ST_6" type="Node2D" parent="Spawners_Top"]
position = Vector2( 600, 50 )
script = ExtResource( 2 )

[node name="ST_7" type="Node2D" parent="Spawners_Top"]
position = Vector2( 700, 50 )
script = ExtResource( 2 )

[node name="ST_8" type="Node2D" parent="Spawners_Top"]
position = Vector2( 800, 50 )
script = ExtResource( 2 )

[node name="ST_9" type="Node2D" parent="Spawners_Top"]
position = Vector2( 900, 50 )
script = ExtResource( 2 )

[node name="ST_10" type="Node2D" parent="Spawners_Top"]
position = Vector2( 1000, 50 )
script = ExtResource( 2 )

[node name="ST_11" type="Node2D" parent="Spawners_Top"]
position = Vector2( 1100, 50 )
script = ExtResource( 2 )

[node name="ST_12" type="Node2D" parent="Spawners_Top"]
position = Vector2( 1200, 50 )
script = ExtResource( 2 )

[node name="Spawners_Right" type="Node2D" parent="."]
position = Vector2( 151.741, -6.15166 )

[node name="SR_1" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 100 )
script = ExtResource( 2 )

[node name="SR_2" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 200 )
script = ExtResource( 2 )

[node name="SR_3" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 300 )
script = ExtResource( 2 )

[node name="SR_4" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 400 )
script = ExtResource( 2 )

[node name="SR_5" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 500 )
script = ExtResource( 2 )

[node name="SR_6" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 600 )
script = ExtResource( 2 )

[node name="SR_7" type="Node2D" parent="Spawners_Right"]
position = Vector2( 1200, 700 )
script = ExtResource( 2 )

[node name="Spawners_Left" type="Node2D" parent="."]
position = Vector2( -98.4265, 6.15166 )

[node name="SL_1" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 100 )
script = ExtResource( 2 )

[node name="SL_2" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 200 )
script = ExtResource( 2 )

[node name="SL_3" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 300 )
script = ExtResource( 2 )

[node name="SL_4" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 400 )
script = ExtResource( 2 )

[node name="SL_5" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 500 )
script = ExtResource( 2 )

[node name="SL_6" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 600 )
script = ExtResource( 2 )

[node name="SL_7" type="Node2D" parent="Spawners_Left"]
position = Vector2( 100, 700 )
script = ExtResource( 2 )

